--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,9 @@
     transform: rotate(360deg);
   }
 }
+
+/* .project-list {
+  padding: 3rem;
+  display: flex;
+  justify-content: space-around;
+} */
