--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* :root {
+  --bs-body-font-family: 'Roboto', sans-serif;
+} */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
